Fix intro box background color contrast, for accessibility

--- a/scss/_dark.scss
+++ b/scss/_dark.scss
@@ -87,4 +87,8 @@
     .about-intro picture {
         background-color: rgba(145,145,145,.1) !important;
     }
+
+    .blog-index .intro {
+        background: #111;
+    }
 }
