--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -15,7 +15,7 @@
         // line-height: 1.75;
         text-align: center;
         font-style: normal;
-        background: rgba(0,0,0,0.04);
+        background: #fff;
         border-radius: .5rem;
         letter-spacing: -0.03px; // hack to prevent fall to next line in Chromium
 
